# ozmqpp

./: .gitignore  CMakeLists.txt
documentation/uml/: ozmqpp.mdj
include/ozmqpp/: CMakeLists.txt  Connection.hh  Context.hh  Frame.hh  Message.hh  RouterConnection.hh  RouterMessage.hh
include/ozmqpp/exceptions/: BadAlloc.hh  CMakeLists.txt  Exception.hh  InitializationFailed.hh  MessageNotReceived.hh  PollingError.hh
src/: CMakeLists.txt  Connection.cpp  Connection.hh  Context.cpp  Context.hh  Frame.cpp  Frame.hh  Message.cpp  Message.hh  Poll.cpp  Poll.hh  RouterConnection.cpp  RouterConnection.hh  RouterMessage.cpp  RouterMessage.hh
src/exceptions/: BadAlloc.cpp  BadAlloc.hh  CMakeLists.txt  Exception.cpp  Exception.hh  InitializationFailed.cpp  InitializationFailed.hh  InvalidContext.cpp  InvalidContext.hh  MessageNotReceived.cpp  MessageNotReceived.hh  MessageNotSent.cpp  MessageNotSent.hh  PollingError.cpp  PollingError.hh
tests/: CMakeLists.txt  conn_explicit_destroy_test.cpp  conn_implicit_destroy_test.cpp  conn_tcp_test.cpp  multi_frame_transfer_test.cpp
